# teardrop-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: cli-reference.md
src/teardrop_cli/: _fixtures.py  _lazy.py  _templates.py  cli.py  config.py  formatting.py
src/teardrop_cli/commands/: agent.py  auth.py  balance.py  billing.py  config_cmd.py  earnings.py  llm_config.py  marketplace.py  mcp.py  models.py  quickstart.py  run.py  tools.py  topup.py  usage.py
tests/: conftest.py  test_agent.py  test_auth.py  test_billing.py  test_config_cmd.py  test_earnings.py  test_init_and_byok.py  test_llm_config.py  test_marketplace.py  test_mcp.py  test_models.py  test_quickstart.py  test_run.py  test_signup.py  test_tools.py
tests/e2e/: README.md  conftest.py  test_auth_e2e.py  test_billing_e2e.py  test_marketplace_e2e.py  test_run_e2e.py  test_signup_e2e.py  test_siwe_login_e2e.py
tests/smoke/: conftest.py  test_config_persistence.py  test_keyring_integration.py  test_perf_lazygroup.py  test_siwe_signing.py
